# advent-of-code

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmark.yml  cargo.yml
benches/: year2024.rs
benches/year2024/: day01.rs  year2024.rs
scripts/: parse_benchmarks.py
src/: lib.rs  main.rs
src/year2024/: day01.rs  day1.rs  day2.rs  day3.rs
