[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Keys <70819367+keys-i@users.noreply.github.com>"]
edition = "2021"
keywords = ["advent_of_code", "aoc"]

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
indoc = { version = "2" }
rustc-hash = { version = "2.0" }
smallvec = { version = "1.11" }

[dev-dependencies]
codspeed-criterion-compat = "2.7.2"

[[bench]]
name = "year2024"
path = "benches/year2024.rs"
harness = false
